# opencode-academic-research

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  QUICKSTART.md  README.ja-JP.md  README.md  README.zh-CN.md  README.zh-TW.md  academic-paper  academic-paper-reviewer  academic-pipeline  deep-research  install.sh  opencode.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: eval-harness.yml  freshness-check.yml  pytest.yml  spec-consistency.yml  test-count-monotonic.yml
.opencode/: package.json
.opencode/agents/: ars-researcher.md  ars-reviewer.md  ars-verifier.md  ars-writer.md
.opencode/commands/: ars-3w.md  ars-abstract.md  ars-cache-invalidate.md  ars-citation-check.md  ars-disclosure.md  ars-format-convert.md  ars-full.md  ars-lit-review.md  ars-mark-read.md  ars-outline.md  ars-plan.md  ars-rebuttal-audit.md  ars-reviewer.md  ars-revision-coach.md  ars-revision.md  ars-unmark-read.md
.opencode/plugins/: ars-session-loaded.ts
.opencode/skills/: academic-paper  academic-paper-reviewer  academic-pipeline  deep-research
commands/: ars-3w.md  ars-abstract.md  ars-cache-invalidate.md  ars-citation-check.md  ars-disclosure.md  ars-format-convert.md  ars-full.md  ars-lit-review.md  ars-mark-read.md  ars-outline.md  ars-plan.md  ars-rebuttal-audit.md  ars-reviewer.md  ars-revision-coach.md  ars-revision.md  ars-unmark-read.md
docs/: OPENCODE_NOTES.md  PERFORMANCE.md  SETUP.md
plugins/: ars-session-loaded.ts
scripts/: _skill_lint.py  check_v3_10_134_write_scope.py  check_v3_6_8_mark_read_commands.py  check_version_consistency.py  test_check_v3_6_8_mark_read_commands.py  test_cross_model_verification_guards.py
scripts/cross_model_verification/: gemini_is_grounded.jq  gemini_sources.jq  openai_has_completed_web_search.jq  openai_sources.jq  openai_text.jq
shared/: cross_model_verification.md
skills/academic-paper/: SKILL.md
skills/academic-paper-reviewer/: SKILL.md
skills/academic-pipeline/: SKILL.md
skills/deep-research/: SKILL.md
