[project]
name = "opencode-academic-research"
version = "3.9.4.2.post1"
description = "Academic research verification and integrity scripts. Citation alignment audits, temporal integrity, claim-faithfulness gates, and bibliography client adapters (Semantic Scholar, OpenAlex, Crossref)."
readme = "README.md"
license = { text = "CC-BY-NC-4.0" }
requires-python = ">=3.11"
authors = [
    { name = "Cheng-I Wu" },
    { name = "OpenCode port maintainers" },
]
keywords = [
    "academic",
    "research",
    "writing",
    "peer-review",
    "citation-integrity",
    "claim-faithfulness",
    "opencode",
]
dependencies = [
    "pyyaml",
    "ruamel.yaml>=0.17",
    "jsonschema[format]>=4.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/timpara/opencode-academic-research"
Upstream = "https://github.com/timpara/academic-research-skills"
OriginalAuthor = "https://github.com/Imbad0202/academic-research-skills"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "scripts/fixtures",
    "tests/fixtures",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "PIE", # pie
    "SIM", # simplify
]
ignore = [
    "E501", # line length: many upstream comments exceed 100 cols and rewrapping
            # would cause large diffs that complicate upstream syncs.
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["scripts", "tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that are slow (deselect with '-m \"not slow\"')",
    "network: tests that hit external APIs",
]
